fix: refine CORS and mail configurations with dynamic properties
- Update `application.properties` with mail SSL/TLS trust settings and dynamic `FRONTEND_BASE_URL`.
- Improve `SecurityConfig` to use environment-specific `frontendBaseUrl` for CORS policy.
- Replace hardcoded CORS methods and headers with dynamic lists.